# Volatility-Trading-Backtest

./: .gitignore  LICENSE  README.md  pyproject.toml  start.bat  stop.bat
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: main.py
apps/web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/web/e2e/: dashboard.spec.ts
apps/web/src/: App.test.tsx  App.tsx  api.ts  main.tsx  sampleData.ts  styles.css  types.ts
apps/web/src/components/: Charts.tsx  CommandBar.tsx  DataTabs.tsx  MetricsStrip.tsx  ParameterDrawer.tsx  RiskPanel.tsx  Sidebar.tsx
docs/: architecture.md  data-contract.md  interview-guide.md
docs/design/: trading-command-center.md
docs/superpowers/plans/: 2026-06-10-volatility-backtest.md
docs/superpowers/specs/: 2026-06-10-volatility-backtest-design.md
examples/: sample-config.json  sweep-grid.json
reports/sample/: latest-sweep.csv  latest-sweep.json
reports/sample/ae3ea4af0eb6/: legs.csv  report.md  result.json  trades.csv
scripts/: start.ps1  stop.ps1
src/volbacktest/: __init__.py  cli.py  data.py  engine.py  factors.py  models.py  performance.py  pricing.py  report.py  risk.py  service.py  strategy.py  sweep.py
tests/: test_api.py  test_cli.py  test_data.py  test_engine.py  test_factors.py  test_package.py  test_performance.py  test_pricing.py  test_risk.py  test_service.py  test_strategy.py  test_sweep.py
