[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volatility-trading-backtest"
version = "1.0.0"
description = "A reproducible SPY options volatility strategy backtesting system."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "chenseldon" }]
dependencies = [
  "fastapi>=0.115,<1",
  "matplotlib>=3.10,<4",
  "numpy>=2.2,<3",
  "pandas>=2.2,<3",
  "pydantic>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[project.scripts]
volbacktest = "volbacktest.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --basetemp=.pytest_tmp"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["volbacktest"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
